--- a/Task_2/registrasi.html
+++ b/Task_2/registrasi.html
@@ -13,8 +13,8 @@
         <h1>Welcome Page</h1>
         <p>Below are my socials, please check them out. Thank you 😊</p>
         <div class="social-icons">
-          <a href="https://github.com/eugenegbrll/library"><img src="d:\E\OneDrive\Pictures\Camera Roll 1\github.png" alt="Github"></a>
-          <a href="https://www.instagram.com/eugenegbrll/"><img src="d:\E\OneDrive\Pictures\Camera Roll 1\instagram.jpg" alt="Instagram"></a>
+          <a href="https://github.com/eugenegbrll/library"><img src="images/github.png" alt="Github"></a>
+          <a href="https://www.instagram.com/eugenegbrll/"><img src="images/instagram.jpg" alt="Instagram"></a>
         </div>
       </div>
     </div>
@@ -90,4 +90,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
