--- a/Task_1/index.html
+++ b/Task_1/index.html
@@ -20,7 +20,7 @@
     <br>
     <section class="home"> 
         <div class="home-img">
-            <center><img src="d:\E\OneDrive\Pictures\Camera Roll 1\solo.jpeg" alt="profile" width="100px"></center>
+            <center><img src="images/solo.jpeg" alt="profile" width="100px"></center>
         </div>
         <br>
         <div class="middle-section">
@@ -28,11 +28,11 @@
             <div class="button-section">
                 <div class="button-container">
                     <div class="circle-button" onclick="openPopup('popup1')">
-                        <center><img src="d:\E\OneDrive\Pictures\Camera Roll 1\hobbies.jpeg" alt="About"></center>
+                        <center><img src="images/hobbies.jpeg" alt="About"></center>
                         <p>About</p>
                     </div>
                     <div class="circle-button" onclick="openPopup('popup2')">
-                        <center><img src="d:\E\OneDrive\Pictures\Camera Roll 1\skills.jpeg" alt="Skills"></center>
+                        <center><img src="images/skills.jpeg" alt="Skills"></center>
                         <p>Skills</p>
                     </div>
                 </div>
@@ -74,11 +74,12 @@
         </div>  
     </section> 
     <div class="full-block">
-    <h2><img src="d:\E\OneDrive\Pictures\Camera Roll 1\float.jpeg" alt="float" width="150px" class="floating-img"></h2>
+    <h2><img src="images/float.jpeg" alt="float" width="150px" class="floating-img"></h2>
     </div>
     <div class="bottom-section">
     <p>@eugene 2025</p>
     </div>
 <script src="script.js"></script>
 </body>
+
 </html>
