git add index.html images/projects.jpeg git commit -m "Update index.html and add projects.jpeg image" git push origin main

--- a/Task_1/index.html
+++ b/Task_1/index.html
@@ -35,6 +35,10 @@
                         <center><img src="images/skills.jpeg" alt="Skills"></center>
                         <p>Skills</p>
                     </div>
+                    <div class="circle-button" onclick="openPopup('popup3')">
+                        <center><img src="images/projects.jpeg" alt="Projects"></center>
+                        <p>Projects</p>
+                    </div>
                 </div>
             </div>
         <div id="popup1" class="popup">
@@ -69,6 +73,17 @@
                     <li>figma</li>
                     <li>apex oracle</li>
                     <li>vscode</li>
+                </ul>
+            </div>
+        </div>  
+        <div id="popup3" class="popup">
+            <div class="popup-content">
+                <span class="close" onclick="closePopup('popup3')">&times;</span>
+                <h2>Projects</h2>
+                <p>This is a list of projects i've done in this course.</p>
+                <ul>
+                    <li>Task_1 : <a href="https://eugenegbrll.github.io/Programming-For-Business/Task_1/">portfolio</a></li>
+                    <li>Task_2 : <a href="https://eugenegbrll.github.io/Programming-For-Business/Task_2/">registration</a></li>
                 </ul>
             </div>
         </div>  
