--- a/Task_1/index.html
+++ b/Task_1/index.html
@@ -63,8 +63,8 @@
                 <ul>
                     <li>graphic design</li>
                     <li>video editing</li>
-                    <li>database</li>
-                    <li>python</li>
+                    <li>database query</li>
+                    <li>pthon, html, css, js</li>
                 </ul>
                 <h3>Tools</h3>
                 <ul>
@@ -98,3 +98,4 @@
 </body>
 
 </html>
+
