--- a/Task_1/index.html
+++ b/Task_1/index.html
@@ -64,7 +64,7 @@
                     <li>graphic design</li>
                     <li>video editing</li>
                     <li>database query</li>
-                    <li>pthon, html, css, js</li>
+                    <li>python, html, css, js</li>
                 </ul>
                 <h3>Tools</h3>
                 <ul>
@@ -98,4 +98,5 @@
 </body>
 
 </html>
+
 
