--- a/Task_1/index.html
+++ b/Task_1/index.html
@@ -64,7 +64,8 @@
                     <li>graphic design</li>
                     <li>video editing</li>
                     <li>database query</li>
-                    <li>python, html, css, js</li>
+                    <li>python</li>
+                    <li>html</li>
                 </ul>
                 <h3>Tools</h3>
                 <ul>
@@ -84,6 +85,7 @@
                 <ul>
                     <li>Task_1 : <a href="https://eugenegbrll.github.io/Programming-For-Business/Task_1/">portfolio</a></li>
                     <li>Task_2 : <a href="https://eugenegbrll.github.io/Programming-For-Business/Task_2/">registration</a></li>
+                    <li>Task_3 : <a href="https://eugenegbrll.github.io/Programming-For-Business/Task_3/">calculator</a</li>
                 </ul>
             </div>
         </div>  
@@ -98,5 +100,6 @@
 </body>
 
 </html>
+
 
 
