--- a/Task_1/index.html
+++ b/Task_1/index.html
@@ -64,8 +64,7 @@
                     <li>graphic design</li>
                     <li>video editing</li>
                     <li>database query</li>
-                    <li>python</li>
-                    <li>html</li>
+                    <li>python, html, css, js</li>
                 </ul>
                 <h3>Tools</h3>
                 <ul>
@@ -100,6 +99,7 @@
 </body>
 
 </html>
+
 
 
 
