--- a/Task_4/index.html
+++ b/Task_4/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./register.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
@@ -84,5 +84,6 @@
     </main>
     <footer></footer>
 </body>
-<script src="./register.js"></script>
+<script src="./script.js"></script>
 </html>
+
